--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,11 @@
     "python.testing.nosetestsEnabled": false,
     "python.testing.unittestEnabled": false,
     "python.testing.promptToConfigure": false,
-    "python.autoComplete.extraPaths": ["./sources/server/game", "./sources/"]
+    "python.autoComplete.extraPaths": [
+        "./sources/server/game",
+        "./sources/"
+    ],
+    "python.linting.pylintEnabled": false,
+    "python.linting.mypyEnabled": true,
+    "python.linting.enabled": true
 }
