--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,11 @@
         "-s",
         "./sources",
         "-p",
-        "test*.py"
+        "*_test.py"
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": false,
-    "python.testing.promptToConfigure": false,
+    "python.testing.unittestEnabled": true,
     "python.autoComplete.extraPaths": [
         "./sources/server/game",
         "./sources/"
